--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,14 @@
-<h1>Table football!</h1>
-<%= link_to 'Matches', controller: 'matches' %>
-<%= link_to 'Players', controller: 'players' %>
-<%= link_to 'Ranking', controller: 'ranking' %>
+
+ <div class= "row">
+
+     <div class = "col-md-4">
+       <a class= "btn-primary btn-lg btn-block" href=http://localhost:3000/matches >Matches</a>	
+	</div>
+	<div class = "col-md-4">
+		<a class= "btn-primary btn-lg btn-block" href=http://localhost:3000/players >Players</a>	
+	</div>
+
+	<div class = "col-md-4">
+		<a class= "btn-primary btn-lg btn-block" href=http://localhost:3000/ranking >Ranking</a>	
+	</div>
+</div>
