--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,6 +1,23 @@
+
+
+ <div class= "row">
+
+     <div class = "col-md-4">
+        <a class= "btn-primary btn-lg btn-block" href=http://localhost:3000/players >Players</a>
+          
+      </div>
+  <div class = "col-md-4">
+    <div class = "well">
+      <h2>Matches</h2>
+    </div>
+  </div>
+
+  <div class = "col-md-4">
+    <a class= "btn-primary btn-lg btn-block" href=http://localhost:3000/ranking >Ranking</a>
+</div>
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Matches</h1>
+
 
 <table>
   <thead>
@@ -12,7 +29,8 @@
       <th>Match date</th>
       <th>Winner score</th>
       <th>Loser score</th>
-      <th colspan="3"></th>
+      <th></th>
+      <th><%= link_to 'New Match', new_match_path %></th>
     </tr>
   </thead>
 
@@ -23,12 +41,13 @@
         <td><%= image_tag Player.find(match.winner).avatar.url(:thumb) %></td>
         <td><%= "#{Player.find(match.loser).first_name}  #{Player.find(match.loser).last_name}" %></td>
         <td><%= image_tag Player.find(match.loser).avatar.url(:thumb) %></td>
+
         <td><%= match.match_date %></td>
         <td>10</td>
         <td><%= match.loser_score %></td>
-        <td><%= link_to 'Show', match %></td>
         <td><%= link_to 'Edit', edit_match_path(match) %></td>
         <td><%= link_to 'Destroy', match, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        
       </tr>
     <% end %>
   </tbody>
@@ -36,4 +55,4 @@
 
 <br>
 
-<%= link_to 'New Match', new_match_path %>
+
