--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,13 +1,34 @@
+
+
+ <div class= "row">
+
+     <div class = "col-md-4">
+      <a class= "btn-primary btn-lg btn-block" href=http://localhost:3000/matches >Matches</a>
+    </div>
+  <div class = "col-md-4">
+    <div class = "well">
+      <h2>Players</h2>
+    </div>
+  </div>
+
+  <div class = "col-md-4">
+    <a class= "btn-primary btn-lg btn-block" href=http://localhost:3000/ranking >Ranking</a>
+  </div>
+</div>
+
+
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Players</h1>
+
 
 <table>
   <thead>
     <tr>
       <th>First name</th>
       <th>Last name</th>
-      <th colspan="3"></th>
+      <th>Avatar</th>
+      <th colspan="2"></th>
+      <th><%= link_to 'New Player', new_player_path %></th>
     </tr>
   </thead>
 
@@ -27,4 +48,4 @@
 
 <br>
 
-<%= link_to 'New Player', new_player_path %>
+
