--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -1,48 +1,42 @@
+
+
+ <div class= "row">
+
+     <div class = "col-md-4">
+       <a class= "btn-primary btn-lg btn-block" href=http://localhost:3000/matches >Edit</a> 
+  </div>
+  <div class = "col-md-4">
+    <a class= "btn-primary btn-lg btn-block" href=http://localhost:3000/players >Players</a>  
+  </div>
+
+  <div class = "col-md-4">
+    <a class= "btn-primary btn-lg btn-block" href=http://localhost:3000/players >Back</a>  
+  </div>
+</div>
+
 <p id="notice"><%= notice %></p>
+<div class = "col-md-4">
+  <%= image_tag @player.avatar.url(:medium) %> 
+  <br><br>
+   <strong>Matches:</strong>
+  <br><br>
+</div>
 
-<%= image_tag @player.avatar.url(:medium) %>
+<div class = "col-md-8">
+  <table>
+   
+    <tbody> 
+      <% @player.statistics.each do |v, k| %>
+        <tr>
+          <th><%= v %></th>
+          <td><%= k %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<p>
-  <strong>First name:</strong>
-  <%= @player.first_name %>
-</p>
-
-<p>
-  <strong>Last name:</strong>
-  <%= @player.last_name %>
-</p>
-
- <p>
-  <strong>Goals:</strong>
-  <%= @player.goals %>
-</p>
-
-<p>
-  <strong>Points per game:</strong>
-  <%= @player.points_per_game %>
-</p>
-
-<p>
-  <strong>Played:</strong>
-  <%= @player.how_many_matches %>
-</p>
-
-<p>
-  <strong>won:</strong>
-  <%= @player.won %>
-</p>
-
-<p>
-  <strong>lose:</strong>
-  <%= @player.lose %>
-</p>
-
-
-<p>
-
-
-  <strong>Matches:</strong>
  
+</div>
 
 <table>
   <thead>
@@ -55,7 +49,7 @@
       <th>Match date</th>
       <th>Winner score</th>
       <th>Loser score</th>
-      <th colspan="3"></th>
+    
     </tr>
   </thead>
 
