--- a/app/views/matches/edit.html.erb
+++ b/app/views/matches/edit.html.erb
@@ -1,6 +1,20 @@
+
+ <div class= "row">
+
+     <div class = "col-md-4">
+       <a class= "btn-primary btn-lg btn-block" href=http://localhost:3000/matches >Matches</a>	
+	</div>
+	<div class = "col-md-4">
+		<a class= "btn-primary btn-lg btn-block" href=http://localhost:3000/players >Players</a>	
+	</div>
+
+	<div class = "col-md-4">
+		<a class= "btn-primary btn-lg btn-block" href=http://localhost:3000/ranking >Ranking</a>	
+	</div>
+</div>
+
 <h1>Editing Match</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @match %> |
-<%= link_to 'Back', matches_path %>
+<br><br><br>
