--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -30,7 +30,7 @@
       <th>Winner score</th>
       <th>Loser score</th>
       <th></th>
-      <th><%= link_to 'New Match', new_match_path %></th>
+      <th class = "new"><%= link_to 'New Match', new_match_path %></th>
     </tr>
   </thead>
 
