--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -28,7 +28,7 @@
       <th>Last name</th>
       <th>Avatar</th>
       <th colspan="2"></th>
-      <th><%= link_to 'New Player', new_player_path %></th>
+      <th class = "new"><%= link_to 'New Player', new_player_path %></th>
     </tr>
   </thead>
 
