--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -3,14 +3,14 @@
  <div class= "row">
 
      <div class = "col-md-4">
-       <a class= "btn-primary btn-lg btn-block" href=http://localhost:3000/matches >Edit</a> 
+       <a class= "btn-primary btn-lg btn-block" href=http://localhost:3000/matches >Matches</a> 
   </div>
   <div class = "col-md-4">
     <a class= "btn-primary btn-lg btn-block" href=http://localhost:3000/players >Players</a>  
   </div>
 
   <div class = "col-md-4">
-    <a class= "btn-primary btn-lg btn-block" href=http://localhost:3000/players >Back</a>  
+    <a class= "btn-primary btn-lg btn-block" href=http://localhost:3000/ranking >Ranking</a>  
   </div>
 </div>
 
@@ -70,5 +70,3 @@
 </table>
 
 
-<%= link_to 'Edit', edit_player_path(@player) %> |
-<%= link_to 'Back', players_path %>
