--- a/app/views/matches/new.html.erb
+++ b/app/views/matches/new.html.erb
@@ -1,7 +1,23 @@
-<%= link_to 'Back', matches_path %>
+
+
+<div class= "row">
+
+	<div class = "col-md-4">
+		<a class= "btn-primary btn-lg btn-block" href=http://localhost:3000/matches >Matches</a>	
+	</div>
+	<div class = "col-md-4">
+		<a class= "btn-primary btn-lg btn-block" href=http://localhost:3000/players >Players</a>	
+	</div>
+
+	<div class = "col-md-4">
+		<a class= "btn-primary btn-lg btn-block" href=http://localhost:3000/ranking >Ranking</a>	
+	</div>
+</div>
+
 
 <h1>New Match</h1>
 
 <%= render 'form' %>
 
 
+<br><br><br>
