--- a/app/views/players/new.html.erb
+++ b/app/views/players/new.html.erb
@@ -1,5 +1,20 @@
-<h1>New Player</h1>
+ <div class= "row">
 
-<%= render 'form' %>
+ 	<div class = "col-md-4">
+ 		<a class= "btn-primary btn-lg btn-block" href=http://localhost:3000/matches >Matches</a>	
+ 	</div>
+ 	<div class = "col-md-4">
+ 		<a class= "btn-primary btn-lg btn-block" href=http://localhost:3000/players >Players</a>	
+ 	</div>
 
-<%= link_to 'Back', players_path %>
+ 	<div class = "col-md-4">
+ 		<a class= "btn-primary btn-lg btn-block" href=http://localhost:3000/ranking >Ranking</a>	
+ 	</div>
+ </div>
+
+ <h1>New Player</h1>
+
+ <%= render 'form' %>
+
+
+ <br><br><br>
